<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".CreateGroupActivity">

    <!-- In-layout header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/surface"
        android:paddingLeft="@dimen/spacing_xs"
        android:paddingRight="@dimen/spacing_m">

        <ImageButton
            android:id="@+id/create_back"
            android:layout_width="@dimen/touch_target_min"
            android:layout_height="@dimen/touch_target_min"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            style="@style/Text.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/groups_create_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_m">

            <TextView
                style="@style/Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups_name_hint" />

            <EditText
                android:id="@+id/create_name"
                style="@style/FormField"
                android:layout_marginTop="@dimen/spacing_xs"
                android:hint="@string/groups_name_hint"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/groups_description_hint" />

            <EditText
                android:id="@+id/create_description"
                style="@style/FormField"
                android:layout_marginTop="@dimen/spacing_xs"
                android:hint="@string/groups_description_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top" />

            <TextView
                style="@style/Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/groups_sport_label" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/create_sport_chips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                style="@style/Text.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:text="@string/groups_skill_label" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/create_skill_chips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/card_background"
                android:padding="@dimen/spacing_m">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/groups_private_label" />

                    <TextView
                        style="@style/Text.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/groups_private_explanation" />
                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/create_private_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_s" />
            </LinearLayout>

            <Button
                android:id="@+id/create_submit"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/groups_create_title" />

            <ProgressBar
                android:id="@+id/create_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_m"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
